View all notes and view note by id
